authorizePocket;getAccessToken; background.js refactor

--- a/browseraction/popup.html
+++ b/browseraction/popup.html
@@ -1,5 +1,5 @@
 <script type="text/javascript" src="popup.js"></script>
 <div style="width:200px">
 	PocketQuora
-	<button id="button">Count the answers for the question</button>
+	<button id="button">Authorize Pocket</button>
 </div>
